deploy - limit metaspace